<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Setting sign in text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#092963"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Setting username -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <!-- Setting username icon-->
        <ImageView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/user" />

        <!-- Setting username edit text-->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"
            android:singleLine="true" />
    </LinearLayout>

    <!-- Setting password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <!-- Setting password icon-->
        <ImageView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/password" />

        <!-- Setting password edit text-->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <!-- Setting login button-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_log"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="#092963"
            android:text="@string/bt_log"
            android:textColor="#FFFFFF" />
    </LinearLayout>


    <!-- Setting register button and forgot password button-->
    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <!-- Setting register button-->
        <Button
            android:id="@+id/bt_reg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:text="@string/bt_reg"
            android:textColor="#092963"
            android:textSize="12dp"
            android:textStyle="normal" />

        <!-- Setting forgot password button-->
        <Button
            android:id="@+id/bt_forg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:text="@string/bt_forg"
            android:textColor="#092963"
            android:textSize="12dp"
            android:layout_alignParentRight="true"
            android:textStyle="normal" />
    </RelativeLayout>


</LinearLayout>
